<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="16dp"
    android:paddingRight="16dp" >

    <TextView
        android:id="@+id/type_here"

        android:layout_width="wrap_content"
        android:layout_height="20dp"
        android:layout_marginTop="4dp"
        android:layout_alignParentEnd="true"
        android:layout_below="@+id/submission_status"

        android:text="@string/submission_status_label"
        android:visibility="invisible" />

    <ToggleButton
        android:id="@+id/toggle_input"

        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"

        android:checked="true"
        android:textOn="@string/toggle_text"
        android:textOff="@string/toggle_video"/>

    <ImageView
        android:id="@+id/submission_status"

        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"

        android:src="@drawable/xmas_season_panda_smol"
        android:visibility="invisible"/>
    
    <Button
        android:id="@+id/edit_btn"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/toggle_input"

        android:text="@string/edit_text_button"
        />

    <Button
        android:id="@+id/process_btn"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignTop="@+id/edit_btn"

        android:text="@string/process_submission_button"
        />

    <TextView
        android:id="@+id/output_view"

        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_below="@+id/process_btn"

        android:text="@string/output_text_default" />

    <Button
        android:id="@+id/copy_output_btn"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"

        android:text="@string/copy_button_text" />

</RelativeLayout>